--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="loginStatusBarColor">#9a5b59</color>
     <color name="registerStatusBarColor">#e86179</color>
 
+    <color name="backgroundgray">#efeeee</color>
+
     <color name="grayBackground">#f3f3f3</color>
     <color name="ahuPrimaryColor">#d00053</color>
     <color name="grayButton">#f5f5f5</color>
