--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -56,11 +56,11 @@
         </RelativeLayout>
 
         <ImageView
-            android:id="@+id/imgSponsored"
-            android:layout_marginTop="58dp"
+            android:id="@+id/imgEventDetail"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:src="@color/colorAccent"/>
+            android:layout_marginTop="58dp"
+            android:src="@color/colorAccent" />
 
         <ImageView
             android:id="@+id/imgShade"
