--- a/app/src/main/res/layout/tab5_fragment.xml
+++ b/app/src/main/res/layout/tab5_fragment.xml
@@ -100,6 +100,15 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                <ImageView
+                    android:id="@+id/imgSetHobbies"
+                    android:layout_width="112dp"
+                    android:layout_height="18dp"
+                    android:scaleType="fitXY"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/sethobbies"/>
                 <TextView
                     android:id="@+id/hobbyTitle"
                     android:layout_width="wrap_content"
