Discover page added

--- a/app/src/main/res/layout/tab2_fragment.xml
+++ b/app/src/main/res/layout/tab2_fragment.xml
@@ -3,6 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#eeeeee">
+    <ImageView
+        android:id="@+id/discoverHeader"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/discoverheader"/>
+    <ListView
+        android:id="@+id/lsDiscover"
+        android:layout_below="@+id/discoverHeader"
+        android:layout_width="match_parent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="1dp"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
