--- a/app/src/main/res/layout/activity_add_events.xml
+++ b/app/src/main/res/layout/activity_add_events.xml
@@ -128,6 +128,16 @@
                     android:paddingStart="12dp"
                     android:paddingTop="9dp"
                     android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/edtTime"
+                    android:layout_width="130dp"
+                    android:layout_height="40dp"
+                    android:layout_below="@+id/edtCtg"
+                    android:layout_marginStart="220dp"
+                    android:layout_marginTop="135dp"
+                    android:paddingStart="12dp"
+                    android:paddingTop="9dp"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/txtIsPriced"
