--- a/app/src/main/res/layout/tab5_fragment.xml
+++ b/app/src/main/res/layout/tab5_fragment.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:background="@color/grayBackground"
     android:layout_height="match_parent">
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -116,7 +118,7 @@
                     android:layout_marginTop="10dp"
                     android:text="@string/hobbyProfile"
                     android:textSize="18sp" />
-                
+
                 <TextView
                     android:id="@+id/txtCtg1"
                     android:layout_width="wrap_content"
